@@ -33,6 +33,7 @@ class QMenu;
 class QAction;
 class KToggleAction;
 class KToolBarPopupAction;
+class KHamburgerMenu;
 class AlarmListModel;
 class AlarmListView;
 class DatePicker;
@@ -81,6 +82,7 @@ protected:
     void           readProperties(const KConfigGroup&) override;
 
 private Q_SLOTS:
+    void           slotInitHamburgerMenu();
     void           slotNew(EditAlarmDlg::Type);
     void           slotNewFromTemplate(const KAlarmCal::KAEvent&);
     void           slotNewTemplate();
@@ -98,7 +100,7 @@ private Q_SLOTS:
     void           slotTemplates();
     void           slotTemplatesEnd();
     void           slotPreferences();
-    void           slotShowMenubar();
+    void           slotToggleMenubar(bool dontShowWarning);
     void           slotConfigureKeys();
     void           slotConfigureNotifications();
     void           slotConfigureToolbar();
@@ -153,6 +155,7 @@ private:
     QSplitter*           mSplitter;            // splits window into list and resource selector
     QWidget*             mPanel;               // panel containing resource selector & date navigator
     QMap<EditAlarmDlg*, KAEvent> mEditAlarmMap; // edit alarm dialogs to be handled by this window
+    KToggleAction*       mActionShowMenuBar;
     KToggleAction*       mActionToggleResourceSel;
     KToggleAction*       mActionToggleDateNavigator;
     QAction*             mActionImportAlarms;
@@ -175,6 +178,7 @@ private:
     KToggleAction*       mActionToggleTrayIcon;
     KToggleAction*       mActionShowArchived;
     KToggleAction*       mActionSpreadWindows;
+    KHamburgerMenu*      mHamburgerMenu;
     QPointer<QMenu>      mContextMenu;
     QPointer<QMenu>      mResourceContextMenu;
     QMap<QAction*, int>  mUndoMenuIds;         // items in the undo/redo menu, in order of appearance
