@@ -2,6 +2,7 @@ KAlarm Change Log
 
 === Version 3.3.0 (KDE Applications 21.08) --- 12 July 2021 ===
 * Add date selector option to enable alarm list view to be filtered.
+* Show hamburger menu when menu bar is hidden, to allow access to all options.
 * Fix crash when context menu is requested after toolbar has been edited.
 
 === Version 3.2.2 (KDE Applications 21.04.2) --- 26 May 2021 ===
